--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 </head>
 <body>
 <h3>Invite the bot here</h3>
-<a href="https://discord.com/api/oauth2/authorize?client_id=709664554124050513&permissions=8&redirect_uri=https%3A%2F%2Fwilly5s.github.io&scope=bot"><button>Invite the Bot to your Discord Server!</button></a>
+<button onclick="invitebot()">Invite the Bot to your Discord Server!</button>
+  <script>
+    function invitebot() {
+      window.open("<a href="https://discord.com/api/oauth2/authorize?client_id=709664554124050513&permissions=8&redirect_uri=https%3A%2F%2Fwilly5s.github.io&scope=bot"");
+    }
+  </script>
 </body>
 </html>
