--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h3>Invite the bot here</h3>
-<button onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=709664554124050513&permissions=8&redirect_uri=https%3A%2F%2Fwilly5s.github.io&scope=bot""';">Invite the Bot to your Discord Server!</button>
+<button onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=709664554124050513&permissions=8&redirect_uri=https%3A%2F%2Fwilly5s.github.io&scope=bot';">Click Here to Invite the Bot!</button>
 </body>
 </html>
